<resources>
    <string name="app_name">EuroCC</string>
    <string name="action_refresh_rates">Refresh Rates</string>
    <string name="str_turn_on_internet">Internet connection required</string>
    <string name="str_no_internet_try_again">No internet connection!</string>
    <string name="str_latest_date">Latest update:</string>
    <string name="str_enter_the_amount">Insert € amount to convert to any available currency in the list</string>
    <string name="str_the_mount_you_wish">Insert € amount you wish to convert</string>
    <string name="str_suggest_report">Suggest or Report</string>
    <string name="str_no_emails_clients_installed">There are no email clients or apps installed on your device.</string>
    <string name="str_updating_the_rates">Updating the rates</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="placeholder">Placeholder</string>
    <string name="add_widget">Add widget</string>
    <string name="rate_activity_name">€-Rates</string>
    <string name="search_by_country_e_g_united_state">Search by country or Currency Code\ne.g. Canada or CAD</string>
    <string name="amount">€-Amount</string>
    <string name="temp_message">Temporary unavailable</string>
    <string name="search">Search</string>
    <string name="countries">Countries</string>
    <string name="favorites">Favorites</string>
    <string name="fail_message">Fail to retrieve countries data</string>
    <string name="connect_refresh">Connect and Refresh</string>
    <string name="done">Done</string>
    <string name="not_available_as_country">Not available as a country</string>
    <string name="fav_countries">Favorite Countries</string>
    <string name="i_am_alone_here_start_by_adding_countries_to_the_list">I am alone here, start by adding countries to the list!</string>
    <string name="title_activity_maps">Map</string>
    <string name="not_applicable">N/A</string>
    <string name="search_by_country_e_g_ireland">Search by country e.g. Ireland</string>
    <string name="widget_it">Widget it :)</string>
    <string name="added_to_favorite">Added to Favorites :)</string>
    <string name="currency_details">Currency Details</string>
    <string name="no_connection_image">No Connection Image</string>
    <string name="a_flag">A flag</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="alpha_2_code">Alpha-2 code:</string>
    <string name="alpha_3_code">Alpha-3 code:</string>
    <string name="region">Region:</string>
    <string name="country_code">Country Code:</string>
    <string name="lang">Lang:</string>
    <string name="code">Code:</string>
    <string name="no_amount_inserted">No amount inserted!!</string>
    <string name="country">Country: </string>
    <string name="currency">Currency: </string>
    <string name="symbol">Symbol:</string>
</resources>
